# yumi_manager

./: CMakeLists.txt  README.md  package.xml
include/yumi_manager/: yumi_manager.h
launch/: leap_manager.launch
msg/: SceneObjects.msg
src/: leap_manager_node.cpp  lego_manager_node.cpp
src/yumi_manager/: leap_manager.cpp  leap_manager_node.cpp  lego_manager_node.cpp  test_node.cpp  unkown_object_manager_node.cpp  yumi_manager.cpp
