<?xml version="1.0"?>
<package>
  <name>yumi_manager</name>
  <version>1.0.0</version>
  <description>The yumi_manager package</description>


  <maintainer email="hkarao@kth.se">hakan karaoguz</maintainer>



  <license>MIT</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>yumi_demos</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>perception_manager</build_depend>
  <build_depend>ros_cpp_tools</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>yumi_eneroth_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>perception_manager</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>yumi_eneroth_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>yumi_demos</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ros_cpp_tools</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
